# src/main/java/it/gov/pagopa/arc/controller/ReceiptController.java
@@ -1,6 +1,7 @@
 package it.gov.pagopa.arc.controller;
 
 import it.gov.pagopa.arc.controller.generated.ReceiptApi;
+import it.gov.pagopa.arc.dto.DebtorReceiptsFiltersDTO;
 import it.gov.pagopa.arc.dto.FileResourceDTO;
 import it.gov.pagopa.arc.service.receipt.ReceiptFacadeService;
 import it.gov.pagopa.arc.utils.SecurityUtils;
@@ -11,6 +12,8 @@ import org.springframework.core.io.Resource;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.*;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.time.OffsetDateTime;
 
 @Slf4j
 @RestController
@@ -23,9 +26,17 @@ public class ReceiptController implements ReceiptApi {
     }
 
     @Override
-    public ResponseEntity<PagedDebtorReceiptsDTO> getPagedDebtorReceipts(Long brokerId, String xFiscalCode, String orgName, Pageable pageable) {
+    public ResponseEntity<PagedDebtorReceiptsDTO> getPagedDebtorReceipts(Long brokerId, String xFiscalCode, String orgName, String noticeNumberOrIuv, OffsetDateTime paymentDateTimeFrom, OffsetDateTime paymentDateTimeTo, Pageable pageable) {
         log.info("Requested getPagedDebtorReceipts on brokerId {} and orgName {}", brokerId, orgName);
-        return ResponseEntity.ok(receiptFacadeService.getPagedDebtorReceipts(brokerId, xFiscalCode, orgName, pageable, SecurityUtils.getPrincipal()));
+        return ResponseEntity.ok(receiptFacadeService.getPagedDebtorReceipts(brokerId,
+                xFiscalCode,
+                DebtorReceiptsFiltersDTO.builder()
+                        .orgName(orgName)
+                        .noticeNumberOrIuv(noticeNumberOrIuv)
+                        .paymentDateTimeFrom(paymentDateTimeFrom)
+                        .paymentDateTimeTo(paymentDateTimeTo)
+                        .build(),
+                pageable, SecurityUtils.getPrincipal()));
     }
 
     @Override
